webgl with dev profiler

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/test99.loader.js";
+      var loaderUrl = buildUrl + "/applepicker-mattweil.loader.js";
       var config = {
-        dataUrl: buildUrl + "/test99.data.gz",
-        frameworkUrl: buildUrl + "/test99.framework.js.gz",
-        codeUrl: buildUrl + "/test99.wasm.gz",
+        dataUrl: buildUrl + "/applepicker-mattweil.data",
+        frameworkUrl: buildUrl + "/applepicker-mattweil.framework.js",
+        codeUrl: buildUrl + "/applepicker-mattweil.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "02-ApplePicker",
